# opendroneid-core-c

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  QUICKSTART_iOS_CN.md  README.md  README_iOS.md  build_ios_cmake.sh  build_ios_framework.sh  check_ios_env.sh  iOS_FRAMEWORK_VALIDATION.md  ios.toolchain.cmake  main.c  opendroneid.c  opendroneid.h  opendroneid_sim.c  test_inout.c  交付说明_CN.md
.github/workflows/: cmake.yml
examples/ios/: DroneIDParser.swift  README.md
libmav2odid/: CMakeLists.txt  libmav2odid.pc  libmav2odid.pc.cmake  mav2odid.c  mav2odid.h
libopendroneid/: CMakeLists.txt  libopendroneid.pc.cmake  odid_wifi.h  opendroneid.c  opendroneid.h  wifi.c
test/: CMakeLists.txt  main.c  opendroneid_sim.c  test_inout.c  test_mav2odid.c  unit_odid_wifi_beacon.cpp
wifi/: CMakeLists.txt  COPYING  README.md
wifi/sender/: CMakeLists.txt  main.c
